deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: icn
  labels:
    name: icn
    environment: production
